Reverted the previous attempt to fix the table vertical-align issue. In order to allow the depricated valign attribute to work, the TR/TH/TD element must not have a reset vericial-align CSS property.

--- a/wdn/templates_3.0/css/content/basestyles.css
+++ b/wdn/templates_3.0/css/content/basestyles.css
@@ -85,6 +85,10 @@ big {
 small {
 	font-size: smaller;
 }
-tr, td, th {
-	vertical-align: inherit;
+tr, th, td {
+	margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
 }
