--- a/wdn/templates_3.0/css/wrapper.css
+++ b/wdn/templates_3.0/css/wrapper.css
@@ -1,6 +1,3 @@
-html {
-    font-size: 100%;
-}
 .skipnav {
     display: none;
 }
